--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.portfolio.koinforbeginners"
+        applicationId "com.portfolio.hiltforbeginners"
         minSdkVersion 22
         targetSdkVersion 29
         versionCode 1
